horizontal scroll fix

--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -20,6 +20,8 @@ body,
     max-width: 100vw;
     max-height: 100vh;
     margin:0;
+    overflow-x: hidden;
+    
 }
 body{
     background-image: $app-back-img;
